# nth_order_covariation

./: .gitignore  CITATION.cff  LICENSE  NOTICE  PLAN.md  README.md  autoencoders_modal.ipynb  main.py  modal_app.py  models.py  pyproject.toml  requirements.txt
data/: AF-P0AA25-F1-model_v6_contacts.npz  AF-P0AA25-F1-msa_v6.a3m  contact_map.ipynb  msa_prep.ipynb
results/: fields_lae2.npy  fields_mrf2.npy  fields_vae1.npy  fields_vae2.npy  hessian_links.txt
visualization/: STRATEGY.md  __init__.py  modal_app.py  plot.py  reduce.py  tensor_reduction.ipynb  tensor_reduction_full.ipynb
